print nmap output to browser, h1 change

--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -26,7 +26,7 @@
         </style>
     </head>
     <body>
-        <h1>SlimToolWrapper</h1>
+        <h1>'Slim'ToolWrapper</h1>
 
         <form action="/">
             <button>HOME</button>
