timing, fragmentation and decoys for nmap

--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -56,5 +56,6 @@
                 </tbody>
             </table>
         <?php endif; ?>
+        <br><span style="font-size:7px">PS: This application shouldn't be accesible from ANYWHERE (except lo ofc)</span>
     </body>
 </html>
